--- a/app/page-portfolio.html
+++ b/app/page-portfolio.html
@@ -19,6 +19,7 @@
     <div class="global-menu">
         <div class="global-menu__wrapper">
             <div class="global__logo"><a href="/" class="global_link">Taknaprimer</a> </div>
+            <a href="" class="global-link global-item">Обмне</a>
         </div>
     </div>
     <div class="page-content">
