--- a/app/index.html
+++ b/app/index.html
@@ -16,11 +16,12 @@
 </head>
 <body>
     
-        <div class="global-menu">
-                <div class="global-menu__wrapper">
-                    <div class="global__logo"><a href="/" class="global_link">Taknaprimer</a> </div>
-                </div>
-            </div>
+    <div class="global-menu__wrapper">
+        <div class="global__logo">
+          <a href="/" class="global__link">Taknaprimer</a>
+        </div>
+        <a href="/" class="global__link global-item">Обмне</a>
+      </div>
     <div class="portfolio">
         <div class="portfolio__wrapper">
             <div class="portfolio__item"><a href="/page-portfolio.html" class="portfoli__link"><img src="img/1.jpg" alt="" class="portfolio__img"></a>
